# norm_bench

./: .gitignore  Cargo.toml  README.md
benches/: norm.rs
testdata/wikipedia/: en.txt  kn.txt  sources.txt
