[package]
name = "norm_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
icu_testdata = { path = "../icu4x/provider/testdata" }
icu_normalizer = { path = "../icu4x/components/normalizer", features = ["serde"] }
rust_icu_ustring =  { path = "../rust_icu/rust_icu_ustring" }
rust_icu_unorm2 = { path = "../rust_icu/rust_icu_unorm2" }
unic-normal = "0.9.0"
unicode-normalization = "0.1.19"
detone = "1.0.0"
criterion = "0.3"
arrayvec = { path = "../arrayvec" }
write16 = { path = "../write16" , features = ["arrayvec"] }

[profile.release]
#lto = true

[profile.bench]
#lto = true

[[bench]]
name = "norm"
harness = false
