[package]
name = "norm_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
icu_normalizer = { path = "../icu4x/components/normalizer", features = ["serde"] }
rust_icu_ustring =  { path = "../rust_icu/rust_icu_ustring" }
rust_icu_unorm2 = { path = "../rust_icu/rust_icu_unorm2" }
unic-normal = "0.9.0"
unicode-normalization = "0.1.19"
detone = "1.0.0"
criterion = { version = "0.3", features = ["real_blackbox"] }
arrayvec = "0.7.2"
write16 = { version = "1.0" , features = ["arrayvec"] }

#[patch.crates-io]
#arrayvec = { git = "https://github.com/hsivonen/arrayvec", rev = "f2a6d65244b2adf851ad5eca61bcc4d30de01c2c" }

#[profile.release]
#lto = true

#[profile.bench]
#lto = true

[[bench]]
name = "norm"
harness = false
